[package]
name = "iocost-benchmarks-ci"
version = "0.1.0"
authors = ["Christopher Obbard <chris.obbard@collabora.com>"]
edition = "2018"
description = "Benchmark database CI scripts"

[dependencies]
futures = "0.3"
octocrab = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
linkify = "0.7.0"

tempfile = "3.2"
reqwest = "0.11"
