[package]
name = "iocost-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "import-results"
path = "src/import-results.rs"

[dependencies]
anyhow = "1.0"
git2 = "0.14"
glob = "0.3"
json = "0.12"
libflate = "1.1"
linkify = "0.8"
md5 = "0.7"
octocrab = "0.16"
reqwest = { version= "0.11" }
semver = "1.0"
tempfile = "3.2"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
